--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -74,7 +74,7 @@ jobs:
         api-level: 29
         script: |
           python -m venv venv
-          source venv/bin/activate
+          . venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
           python setup_appium.py
