--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -2,13 +2,23 @@ name: Openfabric Testnet Test workflow
 
 on: workflow_dispatch
 
-
 jobs:
   run-tests:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
+
+#    - name: Cache dependencies
+#      id: cache
+#      uses: actions/cache@v3
+#      with:
+#        path: |
+#          venv
+#          ~/.cache/pip
+#        key: ${{ runner.os }}-python-${{ hashFiles('requirements.txt') }}
+#        restore-keys: |
+#          ${{ runner.os }}-python-
 
     - name: Set up Python 3.11
       uses: actions/setup-python@v3
@@ -21,6 +31,11 @@ jobs:
       with:
         distribution: 'oracle'
         java-version: '17'
+
+#    - name: Setup Android SDK
+#      uses: android-actions/setup-android@v3
+#      with:
+#        cmdline-tools-version: 10406996
 
     - name: Set up Node js
       uses: actions/setup-node@v4
@@ -36,14 +51,25 @@ jobs:
     - name: Start Appium Server
       run: appium &>/dev/null &
 
+#    - name: Install appium driver
+#      run: appium driver install uiautomator2
+
+#    - name: Setup virtual environment
+#      run: |
+#
+#    - name: Install dependencies
+#      run: |
+
+
     - name: run tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 29
         script: |
           python -m venv venv
-          . venv/bin/activate
+          source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
-          python setup_appium.py
-
+          python test_scripts/testnet_mobile_setup.py
+#    - name: Send CSV data to slack
+#      run: python slack_app/send_test_reports.py
