added workflow to test emulator run

--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -40,6 +40,13 @@ jobs:
     - name: run emulator
       run: |
         cd C:/Users
+        cd installer
+        dir
+        cd ../
+        cd Public
+        dir
+        cd ../
+        cd runneradmin
         dir
         
 
