added workflow to test emulator run

--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         cd C:/Android/android-sdk/emulator
         dir
+        emulator -list-avds
         
 
 #    - name: Set up Node js
