--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -39,8 +39,9 @@ jobs:
 
     - name: run emulator
       run: |
-        cd C:/Android/android-sdk/emulator && emulator -list-avds
-        
+        cd C:\Android\android-sdk\emulator
+        dir
+        emulator -list-avds
 
 #    - name: Set up Node js
 #      uses: actions/setup-node@v4
