android emulator set up

--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -41,7 +41,11 @@ jobs:
       run: |
         cd C:\
         cd Users/runneradmin/AppData
+        dir
+        cd ../../../
         cd Users/installer/AppData
+        dir
+        cd ../../../
         cd Users/Public/AppData
       
         
