android emulator set up

--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -39,8 +39,7 @@ jobs:
 
     - name: run emulator
       run: |
-        cd C:\
-        cd Users/installer/AppData/Local/Android
+        cd C:/Android/android-sdk
         dir
        
       
