--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -39,8 +39,9 @@ jobs:
 
     - name: run emulator
       run: |
+        icacls "C:\Android\android-sdk\emulator\emulator.exe" /grant:r "*S-1-1-0":(RX)
         cd C:/Android/android-sdk/emulator
-        dir
+        emulator -list-avds
        
       
         
