android emulator set up

--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -48,7 +48,7 @@ jobs:
         $acl = Get-Acl $file
         $acl.Access
         cd C:/Android/android-sdk/emulator
-        emulator -list-avds
+        & "C:\Android\android-sdk\emulator\emulator" -list-avds
        
       
         
