--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -40,7 +40,7 @@ jobs:
     - name: run emulator
       run: |
         cd C:/Android/android-sdk/emulator
-        C:\Android\android-sdk\emulator\emulator -list-avds
+        C:\Android\android-sdk\emulator\emulator -avd Pixel_3a_API_34_extension_level_7_x86_64
        
       
         
