--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -39,8 +39,10 @@ jobs:
 
     - name: run emulator
       run: |
-        cd C:/Android/android-sdk/emulator
-        C:\Android\android-sdk\emulator\emulator -avd Pixel_3a_API_34_extension_level_7_x86_64
+        cd C:/Android/android-sdk/
+        dir
+        cd emulator
+#        C:\Android\android-sdk\emulator\emulator -avd Pixel_3a_API_34_extension_level_7_x86_64
        
       
         
