android emulator set up

--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -39,9 +39,8 @@ jobs:
 
     - name: run emulator
       run: |
-        cd C:/Android/android-sdk/
+        cd C:/Android/android-sdk/tools
         dir
-        cd emulator
 #        C:\Android\android-sdk\emulator\emulator -avd Pixel_3a_API_34_extension_level_7_x86_64
        
       
