--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: '8'
 
     - name: Setup Android SDK
