--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'
-        java-version: '8'
+        distribution: 'zulu'
+        java-version: 8
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
