android emulator set up

--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -41,17 +41,10 @@ jobs:
       run: |
         cd C:/Android/android-sdk
         dir
-        dir build-tools
-        dir cmake
-        dir cmdline-tools
-        dir emulator
-        dir extras
-        dir licenses
-        dir ndk
-        dir platform-tools
-        dir platforms
+        dir build-tools/34.0.0
+        dir platforms/android-34
         dir tools
-     
+
 #        .\avdmanager create avd -n Pixel_3a_API_34_extension_level_7_x86_64 -k "system-images;android-34;google_apis;x86_64" --device "pixel_3a" --sdcard 512M
 #        cd ../../
 #        cd emulator
