android emulator set up

--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -39,16 +39,11 @@ jobs:
 
     - name: run emulator
       run: |
-        $rootDirectory = 'C:\Android\android-sdk'
-        $folderName = 'system-images'
-        $folders = Get-ChildItem -Path $rootDirectory -Filter $folderName -Directory -Recurse -ErrorAction SilentlyContinue
-        $folders
-
-#        cd C:/Android/android-sdk
-#        dir
-#        dir build-tools/34.0.0
-#        dir platforms/android-34
-#        dir tools
+        cd C:/Android/android-sdk
+        dir
+        dir build-tools/34.0.0
+        dir platforms/android-34
+        dir tools
 
 #        .\avdmanager create avd -n Pixel_3a_API_34_extension_level_7_x86_64 -k "system-images;android-34;google_apis;x86_64" --device "pixel_3a" --sdcard 512M
 #        cd ../../
