--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -41,9 +41,12 @@ jobs:
       run: |
         cd C:/Android/android-sdk
         dir
-        dir build-tools/34.0.0
-        dir platforms/android-34
+        dir cmdline-tools
         dir platforms/android-34/data
+        dir platforms/android-34/optional
+        dir platforms/android-34/skins
+        dir platforms/android-34/templates
+        dir platforms/android-34
         dir tools
 
 #        .\avdmanager create avd -n Pixel_3a_API_34_extension_level_7_x86_64 -k "system-images;android-34;google_apis;x86_64" --device "pixel_3a" --sdcard 512M
