--- a/.github/workflows/appium_test.yml
+++ b/.github/workflows/appium_test.yml
@@ -29,13 +29,13 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        distribution: 'zulu'
-        java-version: 8
+        distribution: 'oracle'
+        java-version: '17'
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       with:
-        cmdline-tools-version: 8512546
+        cmdline-tools-version: 10406996
 
     - name: run emulator
       run: |
